# Ashen-Voice

./: .gitignore  BUILD_RELEASE.md  DISCORD_SETUP.md  Developer-Build-Installer.bat  FULL_REPLACEMENT_STEPS.txt  INSTALL.txt  PHASE2_COPY_STEPS.txt  PHASE3_1_COPY_STEPS.txt  PHASE3_COPY_STEPS.txt  PHASE4_1_COPY_STEPS.txt  PHASE4_1_FIXES.md  PHASE4_2_COPY_STEPS.txt  PHASE4_2_FIXES.md  PHASE4_COPY_STEPS.txt  PHASES.md  README.md  RELEASE_NOTES.md  THIRD_PARTY_NOTICES.md  package.json
.github/workflows/: build-phase1.yml  build-phase2.yml  build-phase3-1-local-rpc.yml  build-phase3.yml  build-phase4.yml  build-release.yml  build-windows-installer.yml
app/: index.html  main.js  preload.js  renderer.js  styles.css
companion/: companion.js  package.json
installer/: AshenVoice.iss
native/: CMakeLists.txt
native/Injector/: Injector.cpp
native/OverlayDLL/: OverlayDLL.cpp
native/injector/: CMakeLists.txt  main.cpp
native/overlay/: CMakeLists.txt  dllmain.cpp
src/AshenVoice/: App.xaml  App.xaml.cs  AshenVoice.csproj  DiscordBuildConfig.cs  DiscordOAuthService.cs  DiscordRpcClient.cs  MainWindow.xaml  MainWindow.xaml.cs  app.manifest
src/AshenVoice/Assets/: README.txt
